增加获取系统信息工具js 修改商品审核页面样式

--- a/WebContent/backstage/login_white.html
+++ b/WebContent/backstage/login_white.html
@@ -74,13 +74,13 @@
 				<a href="javascript:;">服务条款</a>
 				<a href="javascript:;">联系方式</a>
 			</div>
-			<div class="address">地址：江苏省南京市雨花台区软件园&nbsp;邮编：210019&nbsp;&nbsp;Copyright&nbsp;©&nbsp;2015&nbsp;-&nbsp;2016&nbsp;uimaker-专注于ui设计&nbsp;版权所有</div>
-			<div class="other-info">建议使用IE8及以上版本浏览器&nbsp;苏ICP备&nbsp;09003078号&nbsp;E-mail：admin@uimaker.com</div>
+			<div class="address">毕业猿的解忧小铺&nbsp;Copyright&nbsp;©&nbsp;2016&nbsp;-&nbsp;2017&nbsp;By Cocktail</div>
+			<div class="other-info">建议使用IE8及以上版本浏览器&nbsp;WeChat：itxp1224</div>
 		</div>
 	</div>
 </body> 
 </html>
-    
+<script type="text/javascript" src="lib/custom/util.js"></script>
 <script type="text/javascript">
 
 </script>
