--- a/WebContent/backstage/main.html
+++ b/WebContent/backstage/main.html
@@ -81,12 +81,12 @@
                         <i class="iconfont">&#xe642;</i>
                     </a>
                     <ul class="sider-nav-s">
-                        <li class="active"><a href="javascript:void(0);" onclick="toPage('goodsList',this);">商品审核</a></li>
-                        <li><a href="javascript:void(0);" onclick="toPage('ppList',this);">品牌管理</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('商品审核','index.html');">商品审核</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('品牌管理','ppList.html');">品牌管理</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);" onclick="toPage('expressList',this);">
+                    <a href="javascript:void(0);" onclick="toPage('快递管理','expressList.html');">
                         <span class="iconfont sider-nav-icon">&#xe60d;</span>
                         <span class="sider-nav-title">快递管理</span>
                         <i class="iconfont">&#xe642;</i>
@@ -96,7 +96,7 @@
         </div>
 
         <div id="pf-page">
-            <div class="easyui-tabs1" style="width:100%;height:100%;">
+            <div id="tabs" class="easyui-tabs1" style="width:100%;height:100%;">
                 <div title="首页" style="padding:10px 5px 5px 10px;">
                     <iframe class="page-iframe" src="welcome.html" frameborder="no" border="no" height="100%" width="100%"
                             scrolling="auto"></iframe>
@@ -145,7 +145,7 @@
                 currentTab.find("iframe").attr("src", currentTab.find("iframe").attr("src"));
             }
         }
-    })
+    });
     /*$(window).resize(function () {
         $('.tabs-panels').height($("#pf-page").height() - 46);
         $('.panel-body').height($("#pf-page").height() - 76)
@@ -188,6 +188,19 @@
     //    $('.tabs-panels').height($("#pf-page").height()-46);
     //    $('.panel-body').height($("#pf-page").height()-76)
     // }, 200)
+    function toPage(title, url){
+        if ($('#tabs').tabs('exists', title)){
+            $('#tabs').tabs('select', title);
+        } else {
+            var content = '<iframe scrolling="auto" frameborder="0"  src="'+url+'" style="width:100%;height:100%;"></iframe>';
+            $('#tabs').tabs('add',{
+                title:title,
+                content:content,
+                closable:true
+            });
+        }
+//        $('#tabs').tabs('select', $(page).text());
+    }
 </script>
 </body>
 </html>
