deal ppList.html

--- a/WebContent/backstage/ppList.html
+++ b/WebContent/backstage/ppList.html
@@ -167,7 +167,7 @@
             //发ajax请求后台
         }
     }
-
+    //取消编辑
     function cancelrow(){
         if(endEditing()){
             var row = $('#dg').datagrid('getSelected');
