--- a/WebContent/backstage/main.html
+++ b/WebContent/backstage/main.html
@@ -82,13 +82,21 @@
                     </a>
                     <ul class="sider-nav-s">
                         <li><a href="javascript:void(0);" onclick="toPage('商品审核','index.html',this);">商品审核</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('类型管理','goodType.html',this);">商品类型</a></li>
                         <li><a href="javascript:void(0);" onclick="toPage('品牌管理','ppList.html',this);">品牌管理</a></li>
                     </ul>
                 </li>
                 <li class="firstMenu">
                     <a href="javascript:void(0);" onclick="toPage('快递管理','expressList.html',this);">
-                        <span class="iconfont sider-nav-icon">&#xe60d;</span>
+                        <span class="iconfont sider-nav-icon">&#xe61d;</span>
                         <span class="sider-nav-title">快递管理</span>
+                        <i class="iconfont">&#xe642;</i>
+                    </a>
+                </li>
+                <li class="firstMenu">
+                    <a href="javascript:void(0);" onclick="toPage('用户管理','userList.html',this);">
+                        <span class="iconfont sider-nav-icon">&#xe60d;</span>
+                        <span class="sider-nav-title">用户管理</span>
                         <i class="iconfont">&#xe642;</i>
                     </a>
                 </li>
