--- a/WebContent/backstage/userList.html
+++ b/WebContent/backstage/userList.html
@@ -21,8 +21,8 @@
            onclick="acceptRow()">保存</a>
         <a href="javascript:void(0)" id="rejectBtn" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:false"
            onclick="cancelrow()">撤回</a>
-        商品编码: <input class="easyui-textbox" type="text" name="code" style="width:166px;height:35px;line-height:35px;"></input>
-        商品名称: <input class="easyui-textbox" type="text" name="name" style="width:166px;height:35px;line-height:35px;"></input>
+       用户编码: <input class="easyui-textbox" type="text" name="code" style="width:166px;height:35px;line-height:35px;"></input>
+       用户名称: <input class="easyui-textbox" type="text" name="name" style="width:166px;height:35px;line-height:35px;"></input>
         <a href="#" class="easyui-linkbutton" iconCls="icon-search" data-options="selected:true">查询</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-reload">重置</a>
     </div>
@@ -36,7 +36,7 @@
 <script type="text/javascript">
     $(function(){
         $('#dg').datagrid({
-            title:'品牌列表',
+            title:'用户列表',
             width:'auto',
             height:600,
             rownumbers:false,
@@ -53,8 +53,18 @@
             data:getData(),
             columns:[[
                 {field:'ck',checkbox:true,width:'5%'},
-                {field:'pid',title:'品牌编号',width:'10%',align:'center',sortable:true},
-                {field:'pname',title:'品牌名称',width:'85%',align:'center',editor:'text'},
+                {field:'pid',title:'用户编号',width:'10%',align:'center',sortable:true},
+                {field:'pname',title:'用户名称',width:'20%',align:'center',editor:'text'},
+                {field:'pname',title:'用户名称',width:'35%',align:'center',editor:'text'},
+                {field:'pname',title:'信用度',width:'10%',align:'center',editor:'text'},
+                {field:'pname',title:'余额',width:'10%',align:'center',editor:'text'},
+                {field:'status',title:'状态',width:'10%',align:'center',editor:{
+					type:'checkbox',
+					options:{
+						on: 'normal',
+						off: 'abnormal'
+					}
+				}},
             ]],
             onDblClickRow: onClickCell,
             onClickRow:function(rowIndex, rowData){
@@ -112,6 +122,7 @@
             rows.push({
                 pid: 'pid-'+i,//记得添加唯一标识可在不同页面保持选中状态
                 pname: '苹果',
+                status:'abnormal',
             });
         }
         return rows;
