--- a/WebContent/backstage/userList.html
+++ b/WebContent/backstage/userList.html
@@ -21,10 +21,10 @@
            onclick="acceptRow()">保存</a>
         <a href="javascript:void(0)" id="rejectBtn" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:false"
            onclick="cancelrow()">撤回</a>
-       用户编码: <input class="easyui-textbox" type="text" name="code" style="width:166px;height:35px;line-height:35px;"></input>
-       用户名称: <input class="easyui-textbox" type="text" name="name" style="width:166px;height:35px;line-height:35px;"></input>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-search" data-options="selected:true">查询</a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-reload">重置</a>
+       用户编码: <input class="easyui-textbox" type="text" id="code" name="code" style="width:166px;height:35px;line-height:35px;"></input>
+       用户名称: <input class="easyui-textbox" type="text" id="name" name="name" style="width:166px;height:35px;line-height:35px;"></input>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-search" data-options="selected:true" onclick="searchAll()">查询</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-reload" onclick="resetsearch()">重置</a>
     </div>
 </div>
 
@@ -50,13 +50,13 @@
             collapsible:true,
             toolbar:'#tb',
             pageSize:10,
-            data:getData(),
+            /* data:getData(), */
             columns:[[
                 {field:'ck',checkbox:true,width:'5%'},
-                {field:'pid',title:'用户编号',width:'10%',align:'center',sortable:true},
-                {field:'pname',title:'用户名称',width:'20%',align:'center',editor:'text'},
-                {field:'pname',title:'用户名称',width:'35%',align:'center',editor:'text'},
-                {field:'pname',title:'信用度',width:'10%',align:'center',editor:'text'},
+                {field:'id',title:'用户编号',width:'10%',align:'center',sortable:true},
+                {field:'username',title:'用户名',width:'20%',align:'center',editor:'text'},
+                {field:'password',title:'密码',width:'35%',align:'center',editor:'text'},
+                /* {field:'pname',title:'信用度',width:'10%',align:'center',editor:'text'},
                 {field:'pname',title:'余额',width:'10%',align:'center',editor:'text'},
                 {field:'status',title:'状态',width:'10%',align:'center',editor:{
 					type:'checkbox',
@@ -64,7 +64,7 @@
 						on: 'normal',
 						off: 'abnormal'
 					}
-				}},
+				}}, */
             ]],
             onDblClickRow: onClickCell,
             onClickRow:function(rowIndex, rowData){
@@ -117,16 +117,26 @@
         }).datagrid('clientPaging');
     });
     function getData(){
-        var rows = [];
-        for(var i=1; i<=30; i++){
-            rows.push({
-                pid: 'pid-'+i,//记得添加唯一标识可在不同页面保持选中状态
-                pname: '苹果',
-                status:'abnormal',
-            });
-        }
-        return rows;
+    	//获取用户列表
+        $.ajax({
+    		type:"get",
+    		async:true,
+    		url:"../user/list.action",
+    		dataType:"json",
+    		data:{},
+    		success:function(data){
+    			console.log(data);
+    			if(data.status == 'success'){
+   					var rows = [];
+       				rows = data.data;
+       				$('#dg').datagrid('loadData', rows);
+    			}else{
+    				//没有数据或服务器错误
+    			}
+    		}
+    	});
     }
+    getData();
     $.extend($.fn.datagrid.methods, {
         getEditingRowIndexs: function(jq) {
             var rows = $.data(jq[0], "datagrid").panel.find('.datagrid-row-editing');
@@ -140,6 +150,46 @@
             return indexs;
         }
     });
+    function resetsearch(){
+    	$("#code").textbox('setValue','');
+    	$("#name").textbox('setValue','');
+    	getData();
+    }
+    function searchAll(){
+    	var conds = {
+    		id:'',
+    		username:''
+    	}
+    	if($('#code').textbox('getValue') != ''){
+    		conds.id = $('#code').textbox('getValue');
+    	}else{
+    		delete conds.id;
+    	}
+    	if($('#name').textbox('getValue') != ''){
+    		conds.username = $('#name').textbox('getValue');
+    	}else{
+    		delete conds.username;
+    	}
+    	if($('#code').textbox('getValue') == '' && $('#name').textbox('getValue') == ''){
+    		getData();
+    	}
+    	$.ajax({
+			type:"post",
+			async:true,
+			url:"../user/listByConds.action",
+			dataType:"json",
+			data:{
+				conds:JSON.stringify(conds)
+			},
+			success:function(data){
+				if(data.status == 'success'){
+					$('#dg').datagrid('loadData', data.data);
+				}else{
+					alert(data.mes);
+				}
+			}
+		});
+    }
     //可编辑行
     var editIndex = undefined;
     function endEditing(){
@@ -169,7 +219,7 @@
             if (endEditing()){
                 $('#dg').datagrid('selectRow', index)
                     .datagrid('beginEdit', index);
-                var ed = $('#dg').datagrid('getEditor', {index:index,field:'pname'});
+                var ed = $('#dg').datagrid('getEditor', {index:index,field:'username'});
                 ($(ed.target).data('textbox') ? $(ed.target).textbox('textbox') : $(ed.target)).focus();
                 editIndex = index;
             } else {
@@ -188,12 +238,12 @@
 //            $('#dg').datagrid('insertRow',{'pid':'pid-'});
             $('#dg').datagrid('insertRow',{
                 index: editIndex,  // 索引从0开始
-                row: {'ck': true,'pid':'pid-'}
+                row: {'ck': true}
             });
 //            editIndex = $('#dg').datagrid('getRows').length-1;
             $('#dg').datagrid('selectRow', editIndex)
                 .datagrid('beginEdit', editIndex);
-            var ed = $('#dg').datagrid('getEditor', {index:editIndex,field:'pname'});
+            var ed = $('#dg').datagrid('getEditor', {index:editIndex,field:'username'});
             ($(ed.target).data('textbox') ? $(ed.target).textbox('textbox') : $(ed.target)).focus();
         }
     }
@@ -207,25 +257,23 @@
                     var rindex = $('#dg').datagrid('getRowIndex', row);
                     //alert(rindex);
                     $('#dg').datagrid('deleteRow', rindex);
-//                $.ajax({
-//                    url : '<%=path%>/mbFlup/deleteFlupCycle.do',
-//                    type : 'POST',
-//                    timeout : 60000,
-//                    success : function(data) {
-//                        var msg = '删除';
-//                        if (data) {
-//                            $obj.datagrid('deleteRow', rindex);
-//                            //$obj.datagrid('reload');
-//                            $.messager.alert('提示', msg + '成功！', 'info', function() {
-//                                //window.location.href = root + 'esbService/initSysConfig.do';
-//                            });
-//                        } else {
-//                            $.messager.alert('提示', msg + '失败！', 'error', function() {
-//                                //window.location.href = root + 'esbService/initSysConfig.do';
-//                            });
-//                        }
-//                    }
-//                });
+                    $.ajax({
+            			type:"post",
+            			async:true,
+            			url:"../user/delete.action",
+            			dataType:"json",
+            			data:{
+            				id:row.id
+            			},
+            			success:function(data){
+            				if(data.status == 'success'){
+            					alert(data.mes);
+            					getData();
+            				}else{
+            					alert(data.mes);
+            				}
+            			}
+            		});
                 }else{
                     $('#dg').datagrid('clearSelections');
                 }
@@ -249,6 +297,44 @@
             var row = $('#dg').datagrid('getSelected');
             console.log(row);
             //发ajax请求后台
+            if(row.id == '' || row.id == null){
+            	$.ajax({
+        			type:"post",
+        			async:true,
+        			url:"../user/save.action",
+        			dataType:"json",
+        			data:{
+        				username:row.username,
+       					password:row.password
+        			},
+        			success:function(data){
+        				if(data.status == 'success'){
+        					getData();
+        				}else{
+        					alert(data.mes);
+        				}
+        			}
+        		});
+            }else{
+            	$.ajax({
+        			type:"post",
+        			async:true,
+        			url:"../user/update.action",
+        			dataType:"json",
+        			data:{
+        				id:row.id,
+        				username:row.username,
+       					password:row.password
+        			},
+        			success:function(data){
+        				if(data.status == 'success'){
+        					getData();
+        				}else{
+        					alert(data.mes);
+        				}
+        			}
+        		});
+            }
         }
     }
     //取消编辑
